--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -2424,9 +2424,29 @@ No. & Parameter & Value & Phase & Bounds & Status & SD & Prior (Exp.Val, SD)  & 
 
 \begin{table}[ht]
 \centering
+\caption{Likelihood components from the base model} 
+\label{tab:like}
+\begin{tabular}{>{\raggedright}p{2in}>{\centering}p{1.0in}}
+  \hline
+Likelihood Component & Value \\ 
+  \hline
+Total & 1328.59 \\ 
+  Survey & -28.92 \\ 
+  Discard & -38.1 \\ 
+  Length-frequency data & 175.01 \\ 
+  Age-frequency data & 1208.1 \\ 
+  Recruitment & 8.86 \\ 
+  Forecast Recruitment & 0 \\ 
+  Parameter Priors & 3.64 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
 \caption{Results from 100 jitters from the base model.} 
 \label{tab:jitter}
-\begin{tabular}{>{\centering}p{2in}>{\centering}p{1in}}
+\begin{tabular}{>{\raggedright}p{2in}>{\centering}p{1in}}
   \hline
 Status & Base.Model \\ 
   \hline
@@ -2728,6 +2748,20 @@ ocean perch. \label{fig:ASHOP_Length}}
 \includegraphics{Figures/ASHOP_ages.png}
 \caption{At-Sea hake fishery age frequency distributions for Pacific
 ocean perch. \label{fig:ASHOP_Age}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Figures/POP_lengths.png}
+\caption{Pacific ocean perch survey length frequency distributions for
+Pacific ocean perch. \label{fig:POP_Length}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Figures/POP_ages.png}
+\caption{Pacific ocean perch survey age frequency distributions for
+Pacific ocean perch. \label{fig:POP_Age}}
 \end{figure}
 
 \begin{figure}
