--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -2312,6 +2312,54 @@ True Age (yr) & SD of Observed Age (yr) & True Age (yr) & SD of Observed Age (yr
 
 \FloatBarrier
 
+\begin{table}[ht]
+\centering
+\caption{Specifications of the base model for `r spp`.} 
+\label{tab:Model_setup}
+\scalebox{0.9}{
+\begin{tabular}{>{\raggedright}p{3in}>{\centering}p{2in}}
+  \hline
+Model Specification & Base Model \\ 
+  \hline
+Starting year & 1918 \\ 
+   &  \\ 
+  \underline{Population characteristics} &  \\ 
+  Maximum age & 60 \\ 
+  Gender & 2 \\ 
+  Population lengths & 5-50 cm by 1 cm bins \\ 
+  Summary biomass (mt) & Age 3+ \\ 
+   &  \\ 
+  \underline{Data characteristics} &  \\ 
+  Data lengths & 11-47 cm by 1 cm bins \\ 
+  Data ages & 1-40 \\ 
+  Minimun age for growth calculations & 3 \\ 
+  Maximum age for growth calculations & 20 \\ 
+  First mature age & 0 \\ 
+  Starting year of estimated recruitment &  \\ 
+   &  \\ 
+  \underline{Fishery characteristics} &  \\ 
+  Fishery timing & mid-year \\ 
+  Fishing mortality method & discrete \\ 
+  Maximum F & 0.9 \\ 
+  Catchability & Analytical estimate \\ 
+  Fishery selectivity & Double Normal \\ 
+  At-Sea Hake selectivity & Double Normal \\ 
+  POP survey selectivity & Logistic \\ 
+  Triennial survey & Double Normal \\ 
+  AFSC slope survey & Double Normal \\ 
+  NWFSC slope survey & Double Normal \\ 
+  NWFSC shelf/slope survey & Double Normal \\ 
+   &  \\ 
+  \underline{Fishery time blocks} &  \\ 
+  Fishery selectivity & none \\ 
+  Fishery retention & 1918-1991, 1992-2001, 2002-2007, 2008, 2009-2010, 2011-2016 \\ 
+   \hline
+\end{tabular}
+}
+\end{table}
+
+\FloatBarrier
+
 \begin{landscape}
 \begin{longtable}{rlrrcccll}
 \caption{List of parameters used in
