--- a/BibFile.bib
+++ b/BibFile.bib
@@ -33,6 +33,23 @@
 	file = {Francis_2011_DataWeighting.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\NAQX3IC8\\Francis_2011_DataWeighting.pdf:application/pdf}
 }
 
+@article{punt_quantifying_2008,
+	title = {Quantifying age-reading error for use in fisheries stock assessments, with application to species in {Australia}’s southern and eastern scalefish and shark fishery},
+	volume = {65},
+	issn = {0706-652X, 1205-7533},
+	url = {http://www.nrcresearchpress.com/doi/abs/10.1139/F08-111},
+	doi = {10.1139/F08-111},
+	language = {en},
+	number = {9},
+	urldate = {2016-06-29},
+	journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+	author = {Punt, André E. and Smith, David C. and KrusicGolub, Kyne and Robertson, Simon},
+	month = sep,
+	year = {2008},
+	pages = {1991--2005},
+	file = {Punt 2008 Ageing Error.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\NHJTG4KH\\Punt 2008 Ageing Error.pdf:application/pdf}
+}
+
 @article{thorson_geostatistical_2015,
 	title = {Geostatistical delta-generalized linear mixed models improve precision for estimated abundance indices for {West} {Coast} groundfishes},
 	volume = {72},
@@ -816,4 +833,11 @@
 	year = {2017},
 	pages = {fsw193},
 	file = {fsw193.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\RMTENKQP\\fsw193.pdf:application/pdf}
+}
+
+@article{thorson_nwfscageingerror:_2012,
+	title = {{nwfscAgeingError}: a user interface in {R} for the {Punt} et al. (2008) method for calculating ageing error and imprecision.},
+	journal = {Available from: http://github.com/nwfsc-assess/nwfscAgeingError/},
+	author = {Thorson, J. T. and Stewart, Ian J. and Punt, A. E.},
+	year = {2012}
 }
