--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -884,9 +884,7 @@ Data used in the Pacific ocean perch assessment are summarized in Figure
 \ref{fig:data_plot}. A description of each data source is provided
 below.
 
-\subsection{Fishery-independent data}\label{fishery-independent-data}
-
-\subsection{Fishery-Independent Data:}\label{fishery-independent-data-1}
+\subsection{Fishery-Independent Data:}\label{fishery-independent-data}
 
 \subsubsection{Northwest Fisheries Science Center (NWFSC) shelf-slope
 survey}\label{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}
@@ -997,7 +995,7 @@ A survey targeted designed to sample Pacific ocean perch was conducted
 in 1979 and again in 1985. The estimated index of abundance is shown in
 Table \ref{tab:Index_Summary}.
 
-\subsection{Fishery-dependent data}\label{fishery-dependent-data}
+\subsection{Fishery-Dependent Data}\label{fishery-dependent-data}
 
 \subsubsection{Commercial Fishery
 Landings}\label{commercial-fishery-landings}
@@ -1041,7 +1039,7 @@ landings (1981-2016) were obtained from PacFIN (Pacific Fisheries
 Information Network (PacFIN) retrieval dated \hl{March 3, 2015}, Pacific
 States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
 
-\textbf{At-sea fishery}
+\textbf{At-Sea Hake Fishery}
 
 Catches of Pacific ocean perch are monitored aboard the vessel by
 observers in the At-Sea hake Observer program (ASHOP) and were available
@@ -1058,7 +1056,7 @@ non-hake species in unsampled hauls is determined using bycatch rates
 determined from sampled hauls. Since 2001, more than 97\% of the hauls
 have been observed and sampled.
 
-\textbf{Foreign}
+\textbf{Foreign Catches}
 
 From the 1960s through the early 1970s, foreign trawling enterprises
 harvested considerable amounts of rockfish off Washington and Oregon,
@@ -1153,8 +1151,6 @@ development of the prior where female natural memorability was set equal
 to 0.054 and male natural mortality estimated as an offset from females
 at 0.053.
 
-\vspace{.5cm}
-
 \subsubsection{Sex ratio, maturation, and
 fecundity}\label{sex-ratio-maturation-and-fecundity}
 
@@ -1182,8 +1178,6 @@ Pacific ocean perch was estimated equal to 0\(L\)\textsuperscript{4.98}
 in millions of eggs. Spawning output at length is shown in Figure
 \ref{fig:fecundity}.
 
-\vspace{.5cm}
-
 \subsubsection{Length-weight
 relationship}\label{length-weight-relationship}
 
@@ -1191,15 +1185,41 @@ The length-weight relationship for Pacific ocean perch was estimated
 outside the model using all biological data available from fishery and
 fishery-independent data sources where the female weight-at-length in
 grams was estimated at 0.0000098\(L\)\textsuperscript{3.11} and males at
-0.0000094\(L\)\textsuperscript{3.12} where \(L\) is length in cm.
-
-\vspace{.5cm}
+0.0000094\(L\)\textsuperscript{3.12} where \(L\) is length in cm
+(Figures \ref{fig:Wt_len} and \ref{fig:Wt_len_pred}).
 
 \subsubsection{Growth (length-at-age)}\label{growth-length-at-age}
 
-\hl{Write if estimated or fixed in the final model}
+The length-at-age was estimated for male and female Pacific ocean perch
+using data collected from both fishery-dependent and -independent data
+sources that were collected from 1981-2016. Figure \ref{fig:Len_Age}
+shows the lengths and ages for all years and all data as well as
+predicted von Bertalanffy fits to the data. Females grow larger than
+males and sex specific growth parameters were estimated at the following
+values:
 
-\vspace{.5cm} \textbf{Aging Precision And Bias}
+Females \(L_{\infty}\) = 42.32; \(k\) = 0.169; \(t_0\) = -1.466
+
+Males \(L_{\infty}\) = 39.03; \(k\) = 0.212; \(t_0\) = -1.02
+
+\subsubsection{Ageing Precision And
+Bias}\label{ageing-precision-and-bias}
+
+Uncertainty surrounding the ageing-error process for Pacific ocean perch
+was incorporated by estimating ageing error by age. Age-composition data
+used in the model were from break-and-burn otolith reads aged by the
+Cooperative Ageing Project (CAP) in Newport, Oregon. Break-and-burn
+double reads of more than 1500 otoliths were provided by the CAP lab. An
+ageing error estimate was made based on these double reads using a
+computational tool specifically developed for estimating ageing error
+(Punt et al. \protect\hyperlink{ref-punt_quantifying_2008}{2008}), and
+using release 1.0.0 of the R package nwfscAgeingError (Thorson et al.
+\protect\hyperlink{ref-thorson_nwfscageingerror:_2012}{2012}) for input
+and output diagnostics, publicly available at:
+\url{https://github.com/nwfsc-assess/nwfscAgeingError}. A non-linear
+standard error was estimated by age where there is more variability in
+the estimated age of older fish was estimated (Table
+\ref{tab:Age_Error}, Figure \ref{fig:Age_Error}).
 
 \subsubsection{Environmental Or Ecosystem Data Included In The
 Assessment}\label{environmental-or-ecosystem-data-included-in-the-assessment}
@@ -3265,6 +3285,14 @@ Report. Available from
 \url{https://www.afsc.noaa.gov/Publications/ProcRpt/PR1988-27.pdf}
 {[}accessed 28 February 2017{]}.
 
+\hypertarget{ref-punt_quantifying_2008}{}
+Punt, A.E., Smith, D.C., KrusicGolub, K., and Robertson, S. 2008.
+Quantifying age-reading error for use in fisheries stock assessments,
+with application to species in Australia's southern and eastern
+scalefish and shark fishery. Canadian Journal of Fisheries and Aquatic
+Sciences \textbf{65}(9): 1991--2005. doi:
+\href{https://doi.org/10.1139/F08-111}{10.1139/F08-111}.
+
 \hypertarget{ref-ralston_documentation_2010}{}
 Ralston, S., Pearson, D.E., Field, J.C., and Key, M. 2010. Documentation
 of the California catch reconstruction project. US Department of
@@ -3304,6 +3332,12 @@ abundance trends and distribution shifts using single- and multispecies
 models of fishes and biogenic habitat. ICES Journal of Marine Science:
 Journal du Conseil: fsw193. doi:
 \href{https://doi.org/10.1093/icesjms/fsw193}{10.1093/icesjms/fsw193}.
+
+\hypertarget{ref-thorson_nwfscageingerror:_2012}{}
+Thorson, J.T., Stewart, I.J., and Punt, A.E. 2012. nwfscAgeingError: A
+user interface in R for the Punt et al. (2008) method for calculating
+ageing error and imprecision. Available from:
+http://github.com/nwfsc-assess/nwfscAgeingError/.
 
 \hypertarget{ref-weinberg_estimation_2002}{}
 Weinberg, J.R., Rago, P.J., Wakefield, W.W., and Keith, C. 2002.
