2011 STAR panel requests

--- a/2_Assessment.Rmd
+++ b/2_Assessment.Rmd
@@ -124,9 +124,6 @@ Males $L_{\infty}$ = 39.03; $k$ = 0.212; $t_0$ = -1.02
 Uncertainty surrounding the ageing-error process for `r spp` was incorporated by estimating ageing error by age. Age-composition data used in the model were from break-and-burn otolith reads aged by the Cooperative Ageing Project (CAP) in Newport, Oregon. Break-and-burn double reads of more than 1500 otoliths were provided by the CAP lab.  An ageing error estimate was made based on these double reads using a computational tool specifically developed for estimating ageing error [@punt_quantifying_2008], and using release 1.0.0 of the R package nwfscAgeingError [@thorson_nwfscageingerror:_2012] for input and output diagnostics, publicly available at: https://github.com/nwfsc-assess/nwfscAgeingError. A non-linear standard error was estimated by age where there is more variability in the estimated age of older fish was estimated (Table \ref{tab:Age_Error}, Figure \ref{fig:Age_Error}). 
 
 
-###Environmental Or Ecosystem Data Included In The Assessment
-
-
 <!-- ********************************************************************** -->
 <!-- ***********HISTORY AND CURRENT ASSESSMENT***************************** -->
 <!-- ********************************************************************** -->
@@ -138,23 +135,26 @@ Uncertainty surrounding the ageing-error process for `r spp` was incorporated by
 Include: Response to STAR panel recommendations from the most recent previous 
 assessment.
 
-\begin{description}[style=unboxed]
+Recommendation: Considering transboundary stock effects should be pursued. In particular the consequences of having spawning contributions from external stock components should be evaluated relative to the steepness estimates obtained in the present assessment (see more complete discussion of this recommendation under the Unresolved Problems and Major Uncertainties section, above).
 
-  \item[Recommendation 1: blah blah blah.] \hfill \\
+*STAT response: The STAT team agrees that this should be an ongoing area of research and collaboration between the US and Canada.  This assessment presents a sensitivity where the inclusion of Canadian data are included within the model.*
 
-   STAT response: blah blah blah....
+Recommendation:The benefits of adopting the complex model used this year should be evaluated relative to simpler assumptions and models. While the transition from the simpler old model to
+Stock Synthesis was shown to be similar for the historical period, the depletion estimates in the most recent years were different enough to warrant further investigation.
 
-\item[Recommendation 2: blah blah blah.] \hfill \\
+*STAT response: blah blah blah....*
 
-  STAT response: blah blah blah....
+Recommendation:Discard estimates from observer programs should be presented, reviewed (similar to the catch reconstructions), and be made available to the assessment process.
 
-\item[Recommendation 3: blah blah blah., etc.] \hfill \\
+*STAT response: blah blah blah....*
+  
+Recommendation:The ability to allow different "plus groups" for specific data types should be evaluated (and implemented in Stock Synthesis).  For example, this would provide the ability to use the biased surface-aged data in an appropriate way.
 
-  STAT response: Continue recommendations as needed
+*STAT response: blah blah blah....*
 
+Recommendation:Historical catch reconstruction estimates should be formally reviewed prior to being used in assessments and should be coordinated so that interactions between stocks are appropriately treated. The relative reliability of the catch estimates over time could provide an axis of uncertainty in future assessments.
 
-\end{description}
-
+*STAT response: blah blah blah....*
 
 
 <!-- *************************************************************************** -->
