--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -1221,9 +1221,6 @@ standard error was estimated by age where there is more variability in
 the estimated age of older fish was estimated (Table
 \ref{tab:Age_Error}, Figure \ref{fig:Age_Error}).
 
-\subsubsection{Environmental Or Ecosystem Data Included In The
-Assessment}\label{environmental-or-ecosystem-data-included-in-the-assessment}
-
 \subsection{History Of Modeling Approaches Used For This
 Stock}\label{history-of-modeling-approaches-used-for-this-stock}
 
@@ -1235,22 +1232,46 @@ Recommendations}\label{previous-assessment-recommendations}
 Include: Response to STAR panel recommendations from the most recent
 previous assessment.
 
-\begin{description}[style=unboxed]
+Considering transboundary stock effects should be pursued. In particular
+the consequences of having spawning contributions from external stock
+components should be evaluated relative to the steepness estimates
+obtained in the present assessment (see more complete discussion of this
+recommendation under the Unresolved Problems and Major Uncertainties
+section, above).
 
-  \item[Recommendation 1: blah blah blah.] \hfill \\
+\emph{STAT response: The STAT team agrees that this should be an ongoing
+area of research and collaboration between the US and Canada. This
+assessment presents a sensitivity where the inclusion of Canadian data
+are included within the model.}
 
-   STAT response: blah blah blah....
+The benefits of adopting the complex model used this year should be
+evaluated relative to simpler assumptions and models. While the
+transition from the simpler old model to Stock Synthesis was shown to be
+similar for the historical period, the depletion estimates in the most
+recent years were different enough to warrant further investigation.
 
-\item[Recommendation 2: blah blah blah.] \hfill \\
+\emph{STAT response: blah blah blah\ldots{}.}
 
-  STAT response: blah blah blah....
+Discard estimates from observer programs should be presented, reviewed
+(similar to the catch reconstructions), and be made available to the
+assessment process.
 
-\item[Recommendation 3: blah blah blah., etc.] \hfill \\
+\emph{STAT response: blah blah blah\ldots{}.}
 
-  STAT response: Continue recommendations as needed
+The ability to allow different ``plus groups'' for specific data types
+should be evaluated (and implemented in Stock Synthesis). For example,
+this would provide the ability to use the biased surface-aged data in an
+appropriate way.
 
+\emph{STAT response: blah blah blah\ldots{}.}
 
-\end{description}
+Historical catch reconstruction estimates should be formally reviewed
+prior to being used in assessments and should be coordinated so that
+interactions between stocks are appropriately treated. The relative
+reliability of the catch estimates over time could provide an axis of
+uncertainty in future assessments.
+
+\emph{STAT response: blah blah blah\ldots{}.}
 
 \section{Assessment}\label{assessment}
 
